# Rust-Secret

./: .gitignore  Cargo.toml  LICENSE  README.md  entries.db  model.rs
src/: main.rs  model.rs
static/: index.html  style.css
templates/: comment.html  create.html  index.html  layout.html  search.html  search_results.html
