[package]
name = "rust_secret"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20"}
axum-macros = "0.3.8"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.29.0"
hyper = "0.14.27"
dotenv = "0.15.0"
tera = "1"
chrono = "0.4.31"
lazy_static = "1.4.0"
serde = {version = "1.0.191", features = ["derive"]}
serde_json = "1.0.108"
tower-http =  {version = "0.4.4", features = ["fs"]}